# BAR

./: .gitignore  BAR.py  README.md
.github/workflows/: build.yml
bar-app/: Cargo.toml  README.md
bar-app/.cargo/: config.toml
bar-app/src/: assets.rs  backup.rs  gui.rs  main.rs  main_gui.rs  obs.rs  restore.rs
